[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Popups/NewMapRandom.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.0313726, 0.0313726, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.352941, 0.00392157, 0.00392157, 1 )
border_blend = true

[node name="NewMapRandom" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -77.0
margin_right = 130.0
margin_bottom = 105.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 258.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
text = "Create new Map from random numbers"

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 256.0
margin_bottom = 42.0
placeholder_text = "Name of map"

[node name="Width" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 256.0
margin_bottom = 70.0
max_value = 10000.0
allow_greater = true
prefix = "Width:"

[node name="Height" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 256.0
margin_bottom = 98.0
max_value = 10000.0
allow_greater = true
prefix = "Height:"

[node name="Spread" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 256.0
margin_bottom = 126.0
max_value = 10000.0
step = 0.01
allow_greater = true
prefix = "Spread:"

[node name="SeedNr" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 256.0
margin_bottom = 154.0
placeholder_text = "Seed: Optional"

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 256.0
margin_bottom = 178.0
text = "Create Map"

[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Width" to="." method="_on_Width_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Height" to="." method="_on_Height_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Spread" to="." method="_on_Spread_value_changed"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/SeedNr" to="." method="_on_SeedNr_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
